Fixed stretchy imgs

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,6 @@
 
 .store-item-wrapper img {
     height: 100%;
-    width: 100%;
     float: left;
     position:relative;
 }
